Add favicon fix

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
     "api/index.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/favicon.ico",
+      "dest": "/public/favicon.ico"
+    }
+  ]
 }
