--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,31 @@
   "functions": {
     "api/index.js": {
       "runtime": "nodejs18.x"
+    },
+    "api/ws.js": {
+      "runtime": "nodejs18.x"
     }
   },
   "routes": [
     {
+      "src": "/",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/admin",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/ws",
+      "dest": "/api/ws.js"
+    },
+    {
       "src": "/favicon.ico",
-      "dest": "/public/favicon.ico"
+      "status": 204
     }
   ]
 }
