--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "forex-api-server",
   "version": "2.0.0",
-  "description": "Real-time forex data API server for Vercel",
-  "main": "api/index.js",
+  "description": "Real-time forex data API server for Cloudflare Workers",
+  "main": "worker.js",
   "scripts": {
-    "start": "vercel dev",
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy",
+    "start": "wrangler dev"
+  },
+  "devDependencies": {
+    "wrangler": "^3.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["forex", "api", "trading", "real-time"],
+  "keywords": ["forex", "api", "trading", "cloudflare", "workers"],
   "author": "Your Name",
   "license": "MIT"
 }
