--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "forex-api-server",
   "version": "2.0.0",
-  "description": "Real-time forex data API server for Cloudflare Workers",
-  "main": "worker.js",
+  "description": "Forex API Server for Netlify Functions",
+  "main": "netlify/functions/api.js",
   "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
-    "start": "wrangler dev"
-  },
-  "devDependencies": {
-    "wrangler": "^3.0.0"
+    "dev": "netlify dev",
+    "build": "echo 'No build step required'",
+    "deploy": "netlify deploy --prod"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["forex", "api", "trading", "cloudflare", "workers"],
+  "keywords": ["forex", "api", "netlify", "serverless"],
   "author": "Your Name",
   "license": "MIT"
 }
