--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
 [build]
   functions = "netlify/functions"
+  publish = "."
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/api/*"
@@ -7,6 +11,38 @@
   status = 200
 
 [[redirects]]
+  from = "/admin"
+  to = "/.netlify/functions/api/admin"
+  status = 200
+
+[[redirects]]
+  from = "/generate-key"
+  to = "/.netlify/functions/api/generate-key"
+  status = 200
+
+[[redirects]]
+  from = "/keys"
+  to = "/.netlify/functions/api/keys"
+  status = 200
+
+[[redirects]]
+  from = "/ws"
+  to = "/.netlify/functions/api/ws"
+  status = 200
+
+[[redirects]]
+  from = "/health"
+  to = "/.netlify/functions/api/health"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/.netlify/functions/api"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
